# Network-test-2025

./: CMakeLists.txt
gfx/player/: player_template.aseprite
gfx/playerNew/: gun_player_ak47.aseprite
src/client/: Blood.cpp  Blood.h  Client.cpp  Client.h  Drawable.cpp  Drawable.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  GunShotEffect.cpp  GunShotEffect.h  ObjectClient.cpp  ObjectClient.h  PieceActor.cpp  PieceActor.h  PlayerClient.cpp  PlayerClient.h  ZombieClient.cpp  ZombieClient.h  main.cpp
src/server/: Destructable.h  Game.cpp  Game.h  GameServer.cpp  GameServer.h  Networking.cpp  Networking.h  ObjectServer.h  PlayerServer.cpp  PlayerServer.h  ZombieServer.cpp  ZombieServer.h  ZombieSpawner.cpp  ZombieSpawner.h  main.cpp
src/shared/: NetworkCommands.h  NetworkCommon.cpp  NetworkCommon.h  Resources.cpp  Resources.h  Settings.h  olcGeoPixel.h  olcPGEX_Gamepad.cpp  olcPGEX_Gamepad.h  olcPGEX_QuickGUI.h  olcPGEX_TransformedView.h  olcPixelGameEngine.cpp  olcPixelGameEngine.h  olcUTIL_Camera2D.h  olcUTIL_Geometry2D.h
src/shared/GameMechanics/: Actor.h  Basic.h  Player.cpp  Player.h  Zombie.cpp  Zombie.h
src/src/: CMakeLists.txt
src/src/client/: Client.h  GameClient.h
src/src/server/: GameServer.cpp  GameServer.h  Networking.cpp
src/src/src/client/: Client.cpp  GameClient.cpp  main.cpp
src/src/src/server/: GameServer.h
src/src/src/shared/: NetworkCommands.h
